# area51

./: .gitignore
actuator-demo/: docker-compose.yml
brewpi/: docker-compose.yml
brewq/: Dockerfile
clear-datastore/: bugged-datastore.json  clear_datastore.py  insert_bugged.py
controller-demo/: docker-compose.yml
downsample-viz/: Pipfile  viz.py  viz_min.py
downsampling/: query.txt
fetch/: fetch.sh  output.json
forwarder/: Dockerfile  build.sh  forwarder.py  pyproject.toml
glibersat/: docker-compose.yml
gui-backend/: docker-compose.yml
gui-integration/: docker-compose.yml
influx_test/: docker-compose.yml
install/: install
isis/: getting_started.md  pyproject.toml
isis/isis_example/: poll.py  publish.py  subscribe.py
mdns-browser/: Dockerfile  build.sh  script.py
misc/: A.json  B.json  aio_pika_reproduce.py  args.json  btest.sh  dns.py  docker-compose.yml  echo_tty.py  encoded.py  json_merge.py  output.json  phone_mac.json  spark_info.txt  wpa_supplicant.conf
mosquitto-bridge/: docker-compose.yml  mosquitto.conf
performance/: create.py
portest/: docker-compose.yml
pressure-demo/: docker-compose.yml
pub-tutorial/: script.py
remote/: create.py  docker-compose.yml  remote.py  update.py
replay/: Pipfile  input.csv  replay.py  short.csv
retention-query/: testcase.py
rpi-actuator-demo/: docker-compose.yml
rpi-controller-demo/: docker-compose.yml  shared-internet.txt
rpi-glibersat/: docker-compose.yml  install.sh  migrate.py  setup.sh
rpi-pressure-demo/: docker-compose.yml  pressure_tty.py
rpi-temperature/: script.py
(+16 files in other folders)
