[tool.poetry]
name = "isis-example"
version = "0.1.0"
description = ""
authors = ["Bob Steers <steers.bob@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.1.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.2"
flake8-quotes = "^3.0.0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
